[gd_scene load_steps=6 format=3 uid="uid://cro2314fsdhub"]

[ext_resource type="LabelSettings" uid="uid://cb6xhosfnxffi" path="res://header.tres" id="1_7th62"]
[ext_resource type="Script" uid="uid://c87dv0qtevxim" path="res://Scripts/decisions.gd" id="1_h25v6"]
[ext_resource type="StyleBox" uid="uid://8pqjd5ntdrxs" path="res://Styles/text_button_normal.tres" id="2_h25v6"]
[ext_resource type="StyleBox" uid="uid://ddedinc12x8al" path="res://Styles/text_button_active.tres" id="3_f5d2u"]
[ext_resource type="PackedScene" uid="uid://miu18qm6af1r" path="res://Scenes/search_container.tscn" id="5_f5d2u"]

[node name="Decisions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h25v6")

[node name="MainContents" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="HeaderPanel" type="PanelContainer" parent="MainContents"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainContents/HeaderPanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30

[node name="Header" type="HBoxContainer" parent="MainContents/HeaderPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Header" type="Label" parent="MainContents/HeaderPanel/MarginContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Decisions"
label_settings = ExtResource("1_7th62")

[node name="NewDecisionMargin" type="MarginContainer" parent="MainContents/HeaderPanel/MarginContainer/Header"]
layout_mode = 2
theme_override_constants/margin_right = 25

[node name="NewDecisionButton" type="Button" parent="MainContents/HeaderPanel/MarginContainer/Header/NewDecisionMargin"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.05882353, 0.30980393, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0.96862745, 0.972549, 1)
theme_override_colors/font_hover_color = Color(0.05882353, 0.30980393, 0, 1)
theme_override_font_sizes/font_size = 224
theme_override_styles/normal = ExtResource("2_h25v6")
theme_override_styles/pressed = ExtResource("3_f5d2u")
theme_override_styles/hover = ExtResource("2_h25v6")
text = "+"

[node name="DecisionsMargin" type="MarginContainer" parent="MainContents"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30

[node name="Content" type="VBoxContainer" parent="MainContents/DecisionsMargin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SearchContainer" parent="MainContents/DecisionsMargin/Content" instance=ExtResource("5_f5d2u")]
layout_mode = 2

[node name="DecisionsScroller" type="ScrollContainer" parent="MainContents/DecisionsMargin/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Decisions" type="VBoxContainer" parent="MainContents/DecisionsMargin/Content/DecisionsScroller"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[connection signal="pressed" from="MainContents/HeaderPanel/MarginContainer/Header/NewDecisionMargin/NewDecisionButton" to="." method="_on_new_decision_button_pressed"]
[connection signal="search_changed" from="MainContents/DecisionsMargin/Content/SearchContainer" to="." method="_on_search_container_search_changed"]
[connection signal="scroll_started" from="MainContents/DecisionsMargin/Content/DecisionsScroller" to="." method="_on_decisions_scroller_scroll_started"]
